# simple-traffic

./: CMakeLists.txt  README.md
media/: traffic.simu
src/: main.c  main.h
src/Application/: app.c  app.h
src/ECUAL/button/: button.c  button.h
src/ECUAL/led/: led.c  led.h
src/MCAL/dio/: dio.c  dio.h
src/MCAL/registers/: registers.h
src/MCAL/timer/: timer.c  timer.h
src/Util/: util.h
test/: button_test.c  dio_test.c  led_test.c
